[gd_scene load_steps=12 format=3 uid="uid://b1ngqaf6fb2ak"]

[ext_resource type="Script" path="res://scenes/levels/main/main.gd" id="1_3woa5"]
[ext_resource type="PackedScene" uid="uid://bsi2sm86hkhor" path="res://scenes/objects/qubit/qubit.tscn" id="2_mgg4g"]
[ext_resource type="PackedScene" uid="uid://ckk03qsadcwlw" path="res://scenes/entities/player/player.tscn" id="2_s1drc"]
[ext_resource type="PackedScene" uid="uid://o2xud88mln6v" path="res://scenes/objects/door/door.tscn" id="3_444qi"]
[ext_resource type="PackedScene" uid="uid://65xnlas5jt2i" path="res://scenes/objects/quantum_gate_slot/quantum_gate_slot.tscn" id="3_ynpfr"]
[ext_resource type="MeshLibrary" uid="uid://d555b7hr33n7" path="res://assets/tiles.tres" id="4_1p5pf"]
[ext_resource type="PackedScene" uid="uid://5ye6f6br2bts" path="res://scenes/ui/user_interface.tscn" id="4_6gjh5"]
[ext_resource type="PackedScene" uid="uid://e2dv2absvtoc" path="res://scenes/objects/teleporter/teleporter.tscn" id="6_8rnoy"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_gyik4"]
sky_top_color = Color(0.134281, 0.16838, 0.215799, 1)
sky_horizon_color = Color(0.598989, 0.597969, 0.598742, 1)
ground_bottom_color = Color(0.261676, 0.223495, 0.179171, 1)
ground_horizon_color = Color(0.598989, 0.597969, 0.598742, 1)

[sub_resource type="Sky" id="Sky_5thir"]
sky_material = SubResource("ProceduralSkyMaterial_gyik4")

[sub_resource type="Environment" id="Environment_hc8un"]
background_mode = 2
sky = SubResource("Sky_5thir")
tonemap_mode = 2
glow_enabled = true

[node name="Main" type="Node3D"]
script = ExtResource("1_3woa5")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_hc8un")

[node name="World" type="GridMap" parent="."]
mesh_library = ExtResource("4_1p5pf")
cell_size = Vector3(4, 1, 4)
data = {
"cells": PackedInt32Array(65533, 65533, 11, 65532, 65533, 11, 65532, 65534, 1048587, 65532, 65535, 1048587, 65532, 0, 1048587, 65532, 1, 1048587, 65532, 2, 1048587, 65533, 2, 1048587, 65534, 2, 1048587, 65535, 2, 1048587, 0, 2, 1048587, 1, 2, 1048587, 2, 2, 1048587, 3, 65534, 1048587, 3, 65535, 1048587, 3, 0, 1048587, 3, 1, 1048587, 3, 2, 1048587, 3, 65533, 11, 2, 65533, 11, 1, 65533, 11, 0, 65533, 11, 65535, 65533, 11, 65534, 65533, 11, 327676, 65533, 1048587, 327677, 65533, 1048587, 327678, 65533, 1048587, 327679, 65533, 1048587, 262144, 65533, 1048587, 262147, 65533, 1048587, 262146, 65533, 1048587, 262147, 65534, 1048587, 262147, 65535, 1048587, 262147, 0, 1048587, 262147, 1, 1048587, 262147, 2, 1048587, 262146, 2, 1048587, 262145, 2, 1048587, 327679, 2, 1048587, 262144, 2, 1048587, 327678, 2, 1048587, 327677, 2, 1048587, 327676, 2, 1048587, 327676, 1, 1048587, 327676, 0, 1048587, 327676, 65535, 1048587, 327676, 65534, 1048587, 589820, 65533, 1048587, 589821, 65533, 1441803, 589822, 65533, 1048587, 589823, 65533, 1441803, 524288, 65533, 1441803, 524289, 65533, 1048587, 524290, 65533, 1441803, 524291, 65533, 1441803, 524291, 65534, 1441803, 524291, 65535, 1441803, 524291, 0, 1441803, 524291, 1, 1441803, 524291, 2, 1048587, 524290, 2, 1048587, 524289, 2, 1048587, 524288, 2, 1048587, 589823, 2, 1048587, 589822, 2, 1048587, 589821, 2, 1048587, 589820, 2, 1048587, 589820, 1, 1048587, 589820, 0, 1048587, 589820, 65535, 1048587, 589820, 65534, 1048587, 589821, 65534, 1441803, 589821, 65535, 1441803, 589821, 0, 1441803, 589821, 1, 1441803, 589822, 1, 1441803, 589822, 0, 1441803, 589822, 65535, 1441803, 589822, 65534, 1441803, 589823, 65534, 1441803, 589823, 65535, 1441803, 589823, 0, 1441803, 589823, 1, 1441803, 524288, 0, 1441803, 524288, 65535, 1441803, 524288, 65534, 1441803, 524289, 65535, 1441803, 524289, 65534, 1441803, 524290, 65534, 1441803, 524289, 0, 1441803, 524290, 0, 1441803, 524290, 65535, 1441803, 524289, 1, 1441803, 524290, 1, 1441803, 524288, 1, 1441803, 262144, 65534, 1048587, 262144, 1, 1048587, 0, 1, 1048587, 0, 65534, 1048587, 262145, 65533, 1441803, -262144, 1, 1048587, -262144, 0, 1048587, -262144, 65535, 1048587, -262144, 65534, 1048587, -196609, 65534, 1048587, -196609, 65535, 1048587, -196609, 0, 1048587, -196609, 1, 1048587, -262144, 2, 1048587, -196609, 2, 1048587, -262144, 65533, 1048587, -196609, 65533, 1048587, -196610, 65533, 1048587, -196611, 65533, 1048587, -196610, 65534, 1048587, -196611, 65534, 1048587, -196610, 65535, 1048587, -196611, 65535, 1048587, -262143, 65534, 1048587, -262142, 65534, 1048587, -262141, 65534, 1048587, -262141, 65535, 1048587, -262142, 65535, 1048587, -262143, 65535, 1048587, -262143, 0, 1048587, -262143, 1, 1048587, -262143, 2, 1048587, -262142, 2, 1048587, -262142, 0, 1048587, -262142, 1, 1048587, -262141, 0, 1048587, -262141, 1, 1048587, -262141, 2, 1048587, -196610, 0, 1048587, -196610, 1, 1048587, -196610, 2, 1048587, -196611, 2, 1048587, -196612, 2, 1048587, -196612, 1, 1048587, -196611, 1, 1048587, -196612, 0, 1048587, -196612, 65535, 1048587, -196612, 65534, 1048587, -196612, 65533, 1048587, -196611, 0, 655371, -262143, 65533, 1048587, -262142, 65533, 1048587, -262141, 65533, 1048587)
}
metadata/_editor_floor_ = Vector3(0, -4, 0)

[node name="Player" parent="." instance=ExtResource("2_s1drc")]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, -6, 0.5, 4)

[node name="UserInterface" parent="." instance=ExtResource("4_6gjh5")]

[node name="Objects" type="Node3D" parent="."]

[node name="QuantumCircuit" type="Node3D" parent="Objects"]

[node name="GoalQubit" parent="Objects/QuantumCircuit" instance=ExtResource("2_mgg4g")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -6, 0.5, -6)
is_gold = true

[node name="InputQubit" parent="Objects/QuantumCircuit" node_paths=PackedStringArray("next_slot") instance=ExtResource("2_mgg4g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0.5, 0)
next_slot = NodePath("QuantumGateSlot")

[node name="QuantumGateSlot" parent="Objects/QuantumCircuit/InputQubit" node_paths=PackedStringArray("qubit_in") instance=ExtResource("3_ynpfr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)
qubit_in = NodePath("..")
active = true

[node name="Lamps" type="Node3D" parent="Objects"]

[node name="OmniLight3D" type="OmniLight3D" parent="Objects/Lamps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 8, -6)
light_energy = 10.0
omni_range = 20.0
omni_attenuation = 2.0

[node name="OmniLight3D2" type="OmniLight3D" parent="Objects/Lamps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 8, 0)
light_energy = 10.0
omni_range = 20.0
omni_attenuation = 2.0

[node name="OmniLight3D3" type="OmniLight3D" parent="Objects/Lamps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 8, 6)
light_energy = 10.0
omni_range = 20.0
omni_attenuation = 2.0

[node name="Door" parent="Objects" instance=ExtResource("3_444qi")]
transform = Transform3D(-8.74228e-08, 0, -2, 0, 2, 0, 2, 0, -8.74228e-08, 2.5, 0.5, 0)

[node name="Teleporter" parent="Objects" instance=ExtResource("6_8rnoy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0.5, 0)
